# GreenVisor

./: .gitignore  CMakeLists.txt  controller.py  dxf_loader_nuevo.py  main_window.py
assets/routes/: CAT_Truck_795F.mtl
assets/styles/: main.qss
include/features/block_model/dialogs/: BlockModelDialogs.h
include/features/block_model/engine/: BlockModelFieldUtils.h
include/features/general/dialogs/: LayerDialogs.h
include/features/pit_optimization/dialogs/: EconomicModelDialog.h  EconomicVariablesDialog.h  OpenPitOptimizationDialog.h  PitOptimizationReportDialog.h
include/features/pit_optimization/engine/: EconomicFormula.h  MineFlowPitOptimizer.h
include/features/pit_optimization/models/: EconomicModelDefinition.h
include/features/pit_optimization/widgets/: EconomicTableWidgets.h
include/features/surfaces/dialogs/: TriangulateSurfaceDialog.h
include/features/surfaces/engine/: SurfaceTriangulationEngine.h
include/gui/: AppStyle.h  GuiUtils.h  LayerModel.h  MainWindow.h  StartScreenDialog.h
include/io/: DatamineImporter.h  DxfLoader.h
installer/: GreenVisorInstaller.nsi
src/: GreenVisor.rc  main.cpp
src/features/block_model/dialogs/: BlockModelDialogs.cpp
src/features/block_model/engine/: BlockModelFieldUtils.cpp
src/features/general/dialogs/: LayerDialogs.cpp
src/features/pit_optimization/dialogs/: EconomicVariablesDialog.cpp  PitOptimizationReportDialog.cpp
src/features/pit_optimization/engine/: EconomicFormula.cpp  MineFlowPitOptimizer.cpp
src/gui/: AppStyle.cpp  GuiUtils.cpp  LayerModel.cpp  MainWindow.cpp  StartScreenDialog.cpp
src/io/: DxfLoader.cpp
tools/: optimize_toolbar_icons.py
(+3 files in other folders)
